--- a/main.yml
+++ b/main.yml
@@ -38,7 +38,7 @@
     - never
   vars:
     wazuh_managers:
-      - address: {{ manager_ip }}
+      - address: "{{ manager_ip }}"
         port: 1514
         protocol: tcp
         api_port: 55000
