--- a/roles/ansible-wazuh-agent/tasks/Debian.yml
+++ b/roles/ansible-wazuh-agent/tasks/Debian.yml
@@ -4,6 +4,7 @@
     update_cache: yes
     force_apt_get: yes
     cache_valid_time: 3600
+  ignore_errors: true
   
 - name: Debian/Ubuntu | Install ca-certificates and gnupg
   apt:
