--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,22 @@
 [manager]
+127.0.0.1 ansible_connection=local
 
 [linux]
+10.0.10.181
 
 [windows]
 
 [graylog]
+10.0.10.182
 
 [all:vars]
-manager_ip=CHANGEME
-graylog_port=CHANGEME
-graylog_ip=CHANGEME
+manager_ip=10.0.10.180
+graylog_port=5555
+graylog_ip=10.0.10.182
 indexer_user=CHANGEME
 indexer_password=CHANGEME
+ansible_user=ccdc
+ansible_password=ccdc
+ansible_become_password=ccdc
+ansible_become_method=sudo
+ssh_port=22
