many assorted attempted fixes, none of which work

--- a/roles/agent/defaults/main.yml
+++ b/roles/agent/defaults/main.yml
@@ -200,6 +200,9 @@ wazuh_agent_syscheck:
     - /home/*/snap/
     - /home/*/cache/
     - /home/*/mozilla/ 
+    - '^/home/[^/]+/snap/.*$'      
+    - '^/home/[^/]+/\.cache/.*$'   
+    - '^/home/[^/]+/\.mozilla/.*$' 
   ignore_linux_type:
     - '.log$|.swp$'
   ignore_win:
