--- a/roles/manager/files/agent_linux.conf
+++ b/roles/manager/files/agent_linux.conf
@@ -94,7 +94,7 @@
 
     <!-- Directories to check  (perform all possible verifications) -->
     <directories check_all="yes" whodata="yes" report_changes="yes">/var/ossec/etc/ossec.conf, /var/ossec/etc/rules</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes">/usr/bin, /usr/sbin, /home/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/bin, /usr/sbin, /home/, /bin, /sbin</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/boot/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bash_profile</directories>
@@ -133,9 +133,9 @@
     <ignore>/etc/cups/certs</ignore>
     <ignore>/etc/dumpdates</ignore>
     <ignore>/etc/svc/volatile</ignore>
-    <ignore>/home/*/snap/</ignore>
-    <ignore>/home/*/.cache/</ignore>
-    <ignore>/home/*/.mozilla/</ignore>    
+    <ignore type="sregex">^/home/[^/]+/snap/.*$</ignore>
+    <ignore type="sregex">^/home/[^/]+/\.cache/.*$</ignore>
+    <ignore type="sregex">^/home/[^/]+/\.mozilla/.*$</ignore>
 
     <!-- File types to ignore -->
     <ignore type="sregex">.log$|.swp$</ignore>
@@ -308,5 +308,19 @@
     <log_format>json</log_format>
     <location>/tmp/packetbeat/packetbeat</location>
   </localfile>
+
+  <command>
+    <name>yara_linux</name>
+    <executable>yara.sh</executable>
+    <extra_args>-yara_path /usr/local/bin -yara_rules -C /opt/yara/rules/compiled.linux</extra_args>
+    <timeout_allowed>no</timeout_allowed>
+  </command>
+
+  <active-response>
+    <command>yara_linux</command>
+    <location>local</location>
+    <rules_id>100200,100201,100202,100203,100204,100205,100206,100207,100208,100209,100210,100211,100212,100213,100214,100215,100216,100217,100218,100219</rules_id>
+  </active-response>
+
 </agent_config>
 
