are we getting closer?

--- a/roles/manager/files/agent_linux.conf
+++ b/roles/manager/files/agent_linux.conf
@@ -133,9 +133,9 @@
     <ignore>/etc/cups/certs</ignore>
     <ignore>/etc/dumpdates</ignore>
     <ignore>/etc/svc/volatile</ignore>
-    <ignore type="sregex">^/home/[^/]+/snap/.*$</ignore>
-    <ignore type="sregex">^/home/[^/]+/\.cache/.*$</ignore>
-    <ignore type="sregex">^/home/[^/]+/\.mozilla/.*$</ignore>
+    <ignore type="sregex">/home/*/snap/</ignore>
+    <ignore type="sregex">/home/*/.cache/</ignore>
+    <ignore type="sregex">/home/*/.mozilla/</ignore>
 
     <!-- File types to ignore -->
     <ignore type="sregex">.log$|.swp$</ignore>
@@ -312,7 +312,7 @@
   <command>
     <name>yara_linux</name>
     <executable>yara.sh</executable>
-    <extra_args>-yara_path /usr/local/bin -yara_rules -C /opt/yara/rules/compiled.linux</extra_args>
+    <extra_args>-yara_path /usr/bin -yara_rules -C /opt/yara/rules/compiled.linux</extra_args>
     <timeout_allowed>no</timeout_allowed>
   </command>
 
