--- a/roles/manager/files/agent_linux.conf
+++ b/roles/manager/files/agent_linux.conf
@@ -133,9 +133,10 @@
     <ignore>/etc/cups/certs</ignore>
     <ignore>/etc/dumpdates</ignore>
     <ignore>/etc/svc/volatile</ignore>
-    <ignore type="sregex">/home/*/snap/</ignore>
-    <ignore type="sregex">/home/*/.cache/</ignore>
-    <ignore type="sregex">/home/*/.mozilla/</ignore>
+    <ignore type="sregex">/snap/</ignore>
+    <ignore type="sregex">/.cache/</ignore>
+    <ignore type="sregex">/.mozilla/</ignore>
+    <ignore type="sregex">/.local/</ignore>
 
     <!-- File types to ignore -->
     <ignore type="sregex">.log$|.swp$</ignore>
