tuned syscheck directories

--- a/roles/manager/files/agent_linux.conf
+++ b/roles/manager/files/agent_linux.conf
@@ -97,23 +97,15 @@
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/bin, /usr/sbin, /home/, /bin, /sbin</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/boot/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bash_login</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bashrc</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.bash_logout</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.bash_login</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.bash_profile</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.bashrc</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.bash_logout</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_login</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bashrc</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_logout</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/tmp/, /var/www/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root/.ssh/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/home/*/.ssh/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/var/*/.ssh/</directories>
-    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/ssh/sshd_config</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/ssh</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/systemd/system/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/lib/systemd/system/</directories>
     <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/local/lib/systemd/system/</directories>
