--- a/roles/manager/files/ossec.conf
+++ b/roles/manager/files/ossec.conf
@@ -140,32 +140,25 @@
     <auto_ignore frequency="10" timeframe="3600">no</auto_ignore>
 
     <!-- Directories to check  (perform all possible verifications) -->
-    <directories>/bin,/sbin,/boot</directories>
-    <directories check_all="yes">/var/ossec/etc/ossec.conf, /var/ossec/etc/rules</directories>
-    <directories check_all="yes">/usr/bin, /usr/sbin, /home/</directories>
-    <directories check_all="yes" realtime="yes">/etc/</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.bash_profile</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.bash_login</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.profile</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.bash_profile</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.bashrc</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.bash_logout</directories>
-    <directories check_all="yes" realtime="yes">/root/.bash_profile</directories>
-    <directories check_all="yes" realtime="yes">/root/.bash_login</directories>
-    <directories check_all="yes" realtime="yes">/root/.profile</directories>
-    <directories check_all="yes" realtime="yes">/root/.bash_profile</directories>
-    <directories check_all="yes" realtime="yes">/root/.bashrc</directories>
-    <directories check_all="yes" realtime="yes">/root/.bash_logout</directories>
-    <directories check_all="yes" realtime="yes">/etc, /tmp, /var/www/</directories>
-    <directories check_all="yes" realtime="yes">/root/.ssh/</directories>
-    <directories check_all="yes" realtime="yes">/home/*/.ssh/</directories>
-    <directories check_all="yes" realtime="yes">/var/*/.ssh/</directories>
-    <directories check_all="yes" realtime="yes">/etc/ssh/sshd_config</directories>
-    <directories check_all="yes" realtime="yes">/etc/systemd/system/</directories>
-    <directories check_all="yes" realtime="yes">/usr/lib/systemd/system/</directories>
-    <directories check_all="yes" realtime="yes">/usr/local/lib/systemd/system/</directories>
-    <directories check_all="yes" realtime="yes">/lib/systemd/system/</directories>
-
+    <directories check_all="yes" whodata="yes" report_changes="yes">/var/ossec/etc/ossec.conf, /var/ossec/etc/rules</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/bin, /usr/sbin, /home/, /bin, /sbin</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/boot/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_login</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_profile</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bashrc</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/.bash_logout</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/root</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/tmp/, /var/www/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/ssh</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/etc/systemd/system/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/lib/systemd/system/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/usr/local/lib/systemd/system/</directories>
+    <directories check_all="yes" whodata="yes" report_changes="yes" realtime="yes">/lib/systemd/system/</directories>
+    <directories check_all="yes" realtime="yes" report_changes="yes">/var/spool/cron/crontabs/</directories>
+    
     <!-- Files/directories to ignore -->
     <ignore>/etc/mtab</ignore>
     <ignore>/etc/hosts.deny</ignore>
@@ -179,9 +172,10 @@
     <ignore>/etc/cups/certs</ignore>
     <ignore>/etc/dumpdates</ignore>
     <ignore>/etc/svc/volatile</ignore>
-    <ignore>/home/*/snap</ignore>
-    <ignore>/home/*/.cache</ignore>
-    <ignore>/home/*/.mozilla</ignore>    
+    <ignore type="sregex">/snap/</ignore>
+    <ignore type="sregex">/.cache/</ignore>
+    <ignore type="sregex">/.mozilla/</ignore>
+    <ignore type="sregex">/.local/</ignore>
 
     <!-- File types to ignore -->
     <ignore type="sregex">.log$|.swp$</ignore>
@@ -492,7 +486,7 @@
   <command>
     <name>yara_linux</name>
     <executable>yara.sh</executable>
-    <extra_args>-yara_path /usr/local/bin -yara_rules -C /opt/yara/rules/compiled.linux</extra_args>
+    <extra_args>-yara_path /usr/bin -yara_rules /opt/yara/rules/compiled.linux</extra_args>
     <timeout_allowed>no</timeout_allowed>
   </command>
 
