--- a/roles/agent/tasks/Debian.yml
+++ b/roles/agent/tasks/Debian.yml
@@ -147,6 +147,11 @@
     state: present
     update_cache: true
 
+- name: Copy over osquery config file
+  ansible.builtin.copy: 
+    src: osquery.conf
+    dest: /etc/osquery/osquery.conf
+
 - name: Enable and start osquery
   systemd:
     name: osqueryd.service
