added configs for wazuh syslog server

--- a/roles/manager/files/ossec.conf
+++ b/roles/manager/files/ossec.conf
@@ -203,6 +203,15 @@
     </synchronization>
   </syscheck>
 
+  <!-- Syslog -->
+  <remote>
+    <connection>syslog</connection>
+    <port>514</port>
+    <protocol>tcp</protocol>
+    <allowed-ips>SUBNETHERE</allowed-ips>
+    <local_ip>MANAGERIPHERE</local_ip>
+  </remote>
+
   <!-- Active response -->
   <global>
     <white_list>127.0.0.1</white_list>
